# waste-classifier

./: .mise.toml  .rtx.toml  Makefile  README.md  mise.toml  model-serving.config.tpl  predict  pyproject.toml
.github/: dependabot.yml
docker/: Dockerfile.model
docker/templates/: model-serving.config.tpl
models/smart-recycling/1/: model-serving.config
models/smart-recycling/1/serving/: keras_metadata.pb  saved_model.pb
models/smart-recycling/1/serving/variables/: variables.index
