[tool.poetry]
name = "waste-classifier"
version = "0.1.0"
description = "Model serving service with TensorFlow serving"
authors = ["Tan Le <numbat@fastmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.32.3"
numpy = "^1.26.4"
Pillow = "^10.4.0"
tensorflow = "^2.17.0"
rich = "^13.8.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "PL",  # pylint
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
