[tool.poetry]
name = "waste-classifier"
version = "0.1.0"
description = "Model serving service with TensorFlow serving"
authors = ["Tan Le <numbat@fastmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.32.3"
numpy = "^2.0.2"
Pillow = "^11.1.0"
tensorflow = "^2.18.0"
rich = "^13.9.4"

[tool.poetry.group.lint.dependencies]
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "PL",  # pylint
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
