[project]
name = "waste-classifier"
version = "0.1.0"
description = "Waste classifier service using TensorFlow serving"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Tan Le", email = "numbat@fastmail.com" }]
dependencies = [
  "requests>=2.33.1",
  "numpy>=2.3.5",
  "Pillow>=11.3.0",
  "tensorflow>=2.20.0",
  "rich>=14.0.0",
]

[project.optional-dependencies]
lint = ["ruff>=0.14.7"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "PL",  # pylint
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
